@startuml

title __VALIDATION's Class Diagram__\n

  package  {
    package model.persistence.entity {
      package model.persistence.entity.validation {
        class Notification {
            - errors : List<String>
            + Notification()
            + addError()
            + hasErrors()
            + getResult()
            + setResult()
            + getFormattedErrors()
        }
      }
    }
  }
  

  package  {
    package model.persistence.entity {
      package model.persistence.entity.validation {
        class ResultFetchException {
            - errors : List<String>
            + ResultFetchException()
            + toString()
        }
      }
    }
  }
  

  package  {
    package model.persistence.entity {
      package model.persistence.entity.validation {
        class UserValidator {
            {static} - EMAIL_VALIDATION_REGEX : String
            {static} - MIN_PASSWORD_LENGTH : int
            - errors : List<String>
            + UserValidator()
            + getErrors()
            + validate()
            - validateEmail()
            - validatePassword()
            - containsSpecialCharacter()
            - containsDigit()
        }
      }
    }
  }
  

  Notification o-- T : result
  UserValidator o-- User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
